--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         ports:
             - '${APP_PORT:-80}:80'
             - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            - '${REVERB_PORT:-8080}:${REVERB_PORT:-8080}'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
@@ -24,7 +25,7 @@ services:
         depends_on:
             - mongodb
     mongodb:
-        image: 'mongodb/mongodb-atlas-local:latest'
+        image: 'mongo:latest'
         environment:
             - 'MONGODB_INITDB_ROOT_USERNAME=${MONGODB_USERNAME}'
             - 'MONGODB_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}'
