--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mongodb
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=planning_poker
+MONGODB_URI=mongodb://127.0.0.1:27017
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
