Remove local testing .env file in workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     services:
-      mongodb.test:
+      mongodb:
         image: 'mongo:latest'
         env:
           MONGODB_INITDB_ROOT_USERNAME:
@@ -52,7 +52,7 @@ jobs:
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Copy Environment File
-        run: cp .env.example .env
+        run: rm .env.testing && cp .env.example .env
 
       - name: Generate Application Key
         run: php artisan key:generate
