--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,12 +40,12 @@ jobs:
         with:
           context: .
           push: true
-          platform: ${{ env.BUILD_PLATFORM }}
+          platforms: ${{ vars.BUILD_PLATFORM }}
           build-args: |
-            VITE_REVERB_APP_KEY=${{ env.VITE_REVERB_APP_KEY }}
-            VITE_REVERB_HOST=${{ env.VITE_REVERB_HOST }}
-            VITE_REVERB_PORT=${{ env.VITE_REVERB_PORT }}
-            VITE_REVERB_SCHEME=${{ env.VITE_REVERB_SCHEME }}
+            VITE_REVERB_APP_KEY=${{ vars.VITE_REVERB_APP_KEY }}
+            VITE_REVERB_HOST=${{ vars.VITE_REVERB_HOST }}
+            VITE_REVERB_PORT=${{ vars.VITE_REVERB_PORT }}
+            VITE_REVERB_SCHEME=${{ vars.VITE_REVERB_SCHEME }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
