No need to have separate testing container

--- a/.env.testing
+++ b/.env.testing
@@ -11,8 +11,7 @@ APP_FAKER_LOCALE=en_US
 DB_CONNECTION=mongodb
 MONGODB_USERNAME=
 MONGODB_PASSWORD=
-MONGODB_DATABASE=planning_poker
-MONGODB_URI=mongodb://mongodb.test:27017
+MONGODB_URI=mongodb://mongodb:27017
 
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
